added asynchronous font

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "preload",
         "prefetch",
         "preconnect",
-        "subresource"
+        "subresource",
+        "asynchronous"
     ],
     "authors": [
         {
