--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     ],
     "require": {
-        "craftcms/cms": "^3.5"
+        "craftcms/cms": "^4.0.0-beta.1"
     },
     "autoload": {
         "psr-4": {
